/*
 * $Id: ChangeLog,v 1.603 2009-07-31 03:11:17 declan2005 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-07-30 23:03 UTC-0400 Ciro Vargas C. <cvc@oohg.org>
  * source/h_print.prg
    + added bin selection.

2009-07-26 14:09 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_form.prg
  * source/h_tab.prg
  * source/h_textbox.prg
  * source/h_windows.prg
    + Added ::AdjustResize() method for control-specific
      behaviour.

2009-07-25 23:09 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * image/i_textbox.ch
  * source/h_textbox.prg
    - Removed BTNTEXTBOX code from HMG Experimental.
    + Implemented embedded buttons for textbox controls using
      ooHG style.

2009-07-24 19:04 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_windows.c
    ! Workaround for system lock under Windows Vista.

2009-07-18 21:53 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_form.prg
    ! Fixed DRAW commands repainting.

2009-07-18 20:50 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_menu.prg
    ! Fixed main menu refresh when any item is changed.
    * TMenu:EndMenu() and TMenuItem():EndPopUp() methods redefined.

2009-06-23 11:35 UTC-0400 Ciro Vargas C. <cvc@oohg.org>
  * source/h_label.prg
    ! fixed autosize little bug when are changed font, size or atributes in runtime.

2009-06-19 10:51 UTC-0400 Ciro Vargas C. <cvc@oohg.org>
  * source/h_msgbox.prg
    * changed static function autotype to public function because may be usefull

2009-06-18 17:24 UTC-0400 Ciro Vargas C. <cvc@oohg.org>
  * source/miniprint.prg
    !fixed problem with zoom (exploted with new (on change) changes)

2009-06-12 20:50 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * ./compile_bcc.bat
    * Reverted path's change.
  * source/h_button.prg