@@ -1,5 +1,5 @@
 /*
- * $Id: c_windows.c,v 1.65 2009-07-24 23:59:23 guerra000 Exp $
+ * $Id: c_windows.c,v 1.66 2009-08-01 13:51:56 guerra000 Exp $
  */
 /*
  * ooHG source code:
@@ -125,137 +125,6 @@
 #include "oohg.h"
 
 BOOL Array2Rect(PHB_ITEM aRect, RECT *rc ) ;
-
-static void ChangeNotifyIcon( HWND hWnd, HICON hIcon, LPSTR szText );
-static void ShowNotifyIcon( HWND hWnd, BOOL bAdd, HICON hIcon, LPSTR szText );
-
-LRESULT APIENTRY _OOHG_WndProc( PHB_ITEM pSelf, HWND hWnd, UINT uiMsg, WPARAM wParam, LPARAM lParam, WNDPROC lpfnOldWndProc )
-{
-   PHB_ITEM pResult;
-   LRESULT iReturn;
-   static int iCall = 0;
-   static int iNest = 0;
-
-   iNest++;
-   iCall++;
-
-   _OOHG_Send( pSelf, s_OverWndProc );
-   hb_vmSend( 0 );
-   pResult = hb_param( -1, HB_IT_BLOCK );
-   // ::OverWndProc is a codeblock... execute it
-   if( pResult )
-   {
-      hb_vmPushSymbol( &hb_symEval );
-      hb_vmPush( pResult );
-      HWNDpush( hWnd );
-      hb_vmPushLong( uiMsg );
-      hb_vmPushLong( wParam );
-      hb_vmPushLong( lParam );
-      hb_vmPush( pSelf );
-      hb_vmPushLong( iNest );
-      hb_vmPushLong( iCall );
-      hb_vmDo( 7 );
-      pResult = hb_param( -1, HB_IT_NUMERIC );
-   }
-
-   // ::OverWndProc is NOT a codeblock, or it returns a non-numeric value... execute ::Events()
-   if( ! pResult )
-   {
-      _OOHG_Send( pSelf, s_Events );
-      HWNDpush( hWnd );
-      hb_vmPushLong( uiMsg );
-      hb_vmPushLong( wParam );
-      hb_vmPushLong( lParam );
-      hb_vmSend( 4 );
-      pResult = hb_param( -1, HB_IT_NUMERIC );
-   }
-
-   if( pResult )
-   {
-      // Return value is numeric... return it to Windows
-      iReturn = hb_itemGetNL( pResult );
-   }
-   else
-   {
-      // Return value is NOT numeric... execute default WindowProc
-      iReturn = CallWindowProc( lpfnOldWndProc, hWnd, uiMsg, wParam, lParam );
-   }
-
-   iNest--;
-   return iReturn;
-}
-
-LRESULT APIENTRY _OOHG_WndProcCtrl( HWND hWnd, UINT uiMsg, WPARAM wParam, LPARAM lParam, WNDPROC lpfnOldWndProc )
-{
-   PHB_ITEM pSave, pSelf;
-   LRESULT iReturn;
-
-   pSave = hb_itemNew( NULL );
-   pSelf = hb_itemNew( NULL );
-   hb_itemCopy( pSave, hb_param( -1, HB_IT_ANY ) );
-   hb_itemCopy( pSelf, GetControlObjectByHandle( hWnd ) );
-
-   iReturn = _OOHG_WndProc( pSelf, hWnd, uiMsg, wParam, lParam, lpfnOldWndProc );
-
-   hb_itemReturn( pSave );
-   hb_itemRelease( pSave );
-   hb_itemRelease( pSelf );
-
-   return iReturn;
-}
-
-LRESULT APIENTRY _OOHG_WndProcForm( HWND hWnd, UINT uiMsg, WPARAM wParam, LPARAM lParam, WNDPROC lpfnOldWndProc )
-{
-   PHB_ITEM pSave, pSelf;
-   LRESULT iReturn;
-
-   pSave = hb_itemNew( NULL );
-   pSelf = hb_itemNew( NULL );
-   hb_itemCopy( pSave, hb_param( -1, HB_IT_ANY ) );
-   hb_itemCopy( pSelf, GetFormObjectByHandle( hWnd ) );
-
-   iReturn = _OOHG_WndProc( pSelf, hWnd, uiMsg, wParam, lParam, lpfnOldWndProc );
-
-   if( uiMsg == WM_NCDESTROY )
-   {
-      _OOHG_Send( pSelf, s_Name );
-      hb_vmSend( 0 );
-      UnregisterClass( hb_parc( -1 ), GetModuleHandle( NULL ) );
-   }
-
-   hb_itemReturn( pSave );
-   hb_itemRelease( pSave );
-   hb_itemRelease( pSelf );
-
-   return iReturn;
-}
-
-LRESULT CALLBACK WndProc( HWND hWnd, UINT message, WPARAM wParam, LPARAM lParam )
-{
-   return _OOHG_WndProcForm( hWnd, message, wParam, lParam, DefWindowProc );
-}
-
-LRESULT CALLBACK WndProcMdiChild( HWND hWnd, UINT message, WPARAM wParam, LPARAM lParam )
-{
-   return _OOHG_WndProcForm( hWnd, message, wParam, lParam, DefMDIChildProc );
-}
-
-LRESULT CALLBACK _OOHG_DefFrameProc( HWND hWnd, UINT uiMsg, WPARAM wParam, LPARAM lParam )
-{
-   _OOHG_Send( GetFormObjectByHandle( hWnd ), s_hWndClient );
-   hb_vmSend( 0 );
-   return DefFrameProc( hWnd, HWNDparam( -1 ), uiMsg, wParam, lParam );
-}
-
-LRESULT CALLBACK WndProcMdi( HWND hWnd, UINT uiMsg, WPARAM wParam, LPARAM lParam )
-{
-   return _OOHG_WndProcForm( hWnd, uiMsg, wParam, lParam, _OOHG_DefFrameProc );
-}
-
-LRESULT CALLBACK WndProcMdiClient( HWND hWnd, UINT uiMsg, WPARAM wParam, LPARAM lParam )
-{
-   return _OOHG_WndProcCtrl( hWnd, uiMsg, wParam, lParam, _OOHG_DefFrameProc );
-}
 
 PHB_ITEM _OOHG_GetExistingObject( HWND hWnd, BOOL bForm, BOOL bForceAny )
 {
@@ -605,83 +474,6 @@ HB_FUNC( GETCLIENTRECT )
    hb_stornl( rect.bottom, 2, 4 );
 }
 
-HB_FUNC( REGISTERWINDOW )
-{
-   WNDCLASS WndClass;
-   HBRUSH hbrush = 0;
-   int iWindowType = hb_parni( 4 );
-   LONG lColor;
-
-   WndClass.style         = CS_HREDRAW | CS_VREDRAW | CS_OWNDC | CS_DBLCLKS;
-   WndClass.lpfnWndProc   = WndProc;
-   WndClass.lpszClassName = hb_parc( 2 );
-
-   switch( iWindowType )
-   {
-      case 1:                           // Splitchild
-         WndClass.style         = CS_OWNDC | CS_DBLCLKS;
-         break;
-
-      case 2:                           // MDI client
-         WndClass.style         = CS_HREDRAW | CS_VREDRAW /* | CS_OWNDC */ | CS_DBLCLKS;
-         WndClass.lpfnWndProc   = WndProcMdiChild;
-         // WndClass.lpszClassName = "MDICLIENT";
-         break;
-
-      case 3:                           // MDI child
-         WndClass.style         = CS_DBLCLKS;
-         WndClass.lpfnWndProc   = WndProcMdiChild;
-         break;
-
-      case 4:                           // MDI frame
-         WndClass.style         = CS_HREDRAW | CS_VREDRAW /* | CS_OWNDC */ | CS_DBLCLKS;
-         WndClass.lpfnWndProc   = WndProcMdi;
-         break;
-   }
-   WndClass.cbClsExtra    = 0;
-   WndClass.cbWndExtra    = 0;
-//    WndClass.cbWndExtra    = 20;   MDICHILD!
-   WndClass.hInstance     = GetModuleHandle( NULL );
-   WndClass.hIcon         = 0;
-   if( hb_parclen( 1 ) )
-   {
-      WndClass.hIcon      = LoadIcon( GetModuleHandle( NULL ), hb_parc( 1 ) );
-      if( ! WndClass.hIcon )
-      {
-         WndClass.hIcon   = ( HICON ) LoadImage( GetModuleHandle( NULL ), hb_parc( 1 ) , IMAGE_ICON, 0, 0, LR_LOADFROMFILE + LR_DEFAULTSIZE );
-      }
-   }
-   if( ! WndClass.hIcon )
-   {
-       WndClass.hIcon     = LoadIcon( NULL, IDI_APPLICATION );
-   }
-   WndClass.hCursor       = LoadCursor( NULL, IDC_ARROW );
-
-   lColor = -1;
-   _OOHG_DetermineColor( hb_param( 3, HB_IT_ANY ), &lColor );
-   if( lColor == -1 )
-   {
-      WndClass.hbrBackground = ( HBRUSH )( COLOR_BTNFACE + 1 );
-   }
-   else
-   {
-      hbrush = CreateSolidBrush( lColor );
-      WndClass.hbrBackground = hbrush;
-   }
-
-   WndClass.lpszMenuName  = NULL;
-   if( ! RegisterClass( &WndClass ) )
-   {
-      char cBuffError[ 1000 ];
-      sprintf( cBuffError, "Window %s Registration Failed! Error %i", hb_parc( 2 ), ( int ) GetLastError() );
-      MessageBox( 0, cBuffError, "Error!",
-                  MB_ICONEXCLAMATION | MB_OK | MB_SYSTEMMODAL );
-      ExitProcess( 0 );
-   }
-
-   hb_retnl ( (LONG) hbrush ) ;
-}
-
 HB_FUNC( SETWINDOWBACKCOLOR )
 {
    HWND hWnd = HWNDparam( 1 );
@@ -705,17 +497,17 @@ HB_FUNC( SETWINDOWBACKCOLOR )
    hb_retnl( ( ULONG ) hBrush );
 }
 
-HB_FUNC (GETDESKTOPWIDTH)
+HB_FUNC( GETDESKTOPWIDTH )
 {
-	hb_retni ( GetSystemMetrics(SM_CXSCREEN) ) ;
+   hb_retni( GetSystemMetrics( SM_CXSCREEN ) ) ;
 }
 
 HB_FUNC (GETDESKTOPHEIGHT)
 {
-   hb_retni ( GetSystemMetrics(SM_CYSCREEN) ) ;
+   hb_retni( GetSystemMetrics( SM_CYSCREEN ) ) ;
 }
 
-HB_FUNC (GETWINDOWROW)
+HB_FUNC( GETWINDOWROW )
 {
    RECT rect;
    hb_xmemset( &rect, 0, sizeof( rect ) );
@@ -723,7 +515,7 @@ HB_FUNC (GETWINDOWROW)
    hb_retni( rect.top );
 }
 
-HB_FUNC (GETWINDOWCOL)
+HB_FUNC( GETWINDOWCOL )
 {
    RECT rect;
    hb_xmemset( &rect, 0, sizeof( rect ) );
@@ -731,7 +523,7 @@ HB_FUNC (GETWINDOWCOL)
    hb_retni( rect.left );
 }
 
-HB_FUNC (GETWINDOWWIDTH)
+HB_FUNC( GETWINDOWWIDTH )
 {
    RECT rect;
    hb_xmemset( &rect, 0, sizeof( rect ) );
@@ -739,7 +531,7 @@ HB_FUNC (GETWINDOWWIDTH)
    hb_retni( rect.right - rect.left );
 }
 
-HB_FUNC (GETWINDOWHEIGHT)
+HB_FUNC( GETWINDOWHEIGHT )
 {
    RECT rect;
    hb_xmemset( &rect, 0, sizeof( rect ) );
@@ -747,45 +539,37 @@ HB_FUNC (GETWINDOWHEIGHT)
    hb_retni( rect.bottom - rect.top );
 }
 
-HB_FUNC (GETTITLEHEIGHT)
+HB_FUNC( GETTITLEHEIGHT )
 {
-	hb_retni ( GetSystemMetrics( SM_CYCAPTION ) ) ;
+   hb_retni( GetSystemMetrics( SM_CYCAPTION ) );
 }
 
-HB_FUNC (GETBORDERHEIGHT)
+HB_FUNC( GETBORDERHEIGHT )
 {
-	hb_retni ( GetSystemMetrics(  SM_CYSIZEFRAME ) ) ;
+   hb_retni( GetSystemMetrics(  SM_CYSIZEFRAME ) );
 }
 
-HB_FUNC (GETBORDERWIDTH)
+HB_FUNC( GETBORDERWIDTH )
 {
-	hb_retni ( GetSystemMetrics( SM_CXSIZEFRAME ) ) ;
+   hb_retni( GetSystemMetrics( SM_CXSIZEFRAME ) );
 }
 
-HB_FUNC ( ISWINDOWVISIBLE )
+HB_FUNC( ISWINDOWVISIBLE )
 {
-   hb_retl( IsWindowVisible( HWNDparam( 1 ) ) ) ;
+   hb_retl( IsWindowVisible( HWNDparam( 1 ) ) );
 }
 
-
-HB_FUNC ( ISWINDOWMAXIMIZED )
+HB_FUNC( ISWINDOWMAXIMIZED )
 {
-   hb_retl( IsZoomed( HWNDparam( 1 ) ) ) ;
-  }
-
-HB_FUNC ( ISWINDOWMINIMIZED )
-{
-   hb_retl( IsIconic( HWNDparam( 1 ) ) ) ;
-  }
-
-
-//----------------------------------------------------------------------------//
-HB_FUNC ( SHOWNOTIFYICON )
-{
-   ShowNotifyIcon( HWNDparam( 1 ), (BOOL) hb_parl(2), (HICON) hb_parnl(3), (LPSTR) hb_parc(4) );
+   hb_retl( IsZoomed( HWNDparam( 1 ) ) );
 }
-//----------------------------------------------------------------------------//
-static void ShowNotifyIcon(HWND hWnd, BOOL bAdd, HICON hIcon, LPSTR szText)
+
+HB_FUNC( ISWINDOWMINIMIZED )
+{
+   hb_retl( IsIconic( HWNDparam( 1 ) ) );
+}
+
+static void ShowNotifyIcon( HWND hWnd, BOOL bAdd, HICON hIcon, LPSTR szText )
 {
   NOTIFYICONDATA nid;
   ZeroMemory(&nid,sizeof(nid));
@@ -801,6 +585,11 @@ static void ShowNotifyIcon(HWND hWnd, BOOL bAdd, HICON hIcon, LPSTR szText)
     Shell_NotifyIcon(NIM_ADD,&nid);
   else
     Shell_NotifyIcon(NIM_DELETE,&nid);
+}
+
+HB_FUNC( SHOWNOTIFYICON )
+{
+   ShowNotifyIcon( HWNDparam( 1 ), ( BOOL ) hb_parl( 2 ), ( HICON ) hb_parnl( 3 ), ( LPSTR ) hb_parc( 4 ) );
 }
 
 HB_FUNC( GETINSTANCE )
@@ -823,22 +612,17 @@ HB_FUNC( GETCURSORPOS )
 HB_FUNC( LOADTRAYICON )
 {
    HICON himage;
-   HINSTANCE hInstance  = (HINSTANCE) hb_parnl(1);  // handle to application instance
-   LPCTSTR   lpIconName = (LPCTSTR)   hb_parc(2);   // name string or resource identifier
+   HINSTANCE hInstance  = ( HINSTANCE ) hb_parnl( 1 );  // handle to application instance
+   LPCTSTR   lpIconName = ( LPCTSTR )   hb_parc( 2 );   // name string or resource identifier
 
-   himage = LoadIcon( hInstance ,  lpIconName );
+   himage = LoadIcon( hInstance, lpIconName );
 
    if( himage == NULL )
    {
       himage = ( HICON ) LoadImage( hInstance ,  lpIconName , IMAGE_ICON, 0, 0, LR_LOADFROMFILE + LR_DEFAULTSIZE ) ;
    }
 
-   hb_retnl ( (LONG) himage );
-}
-
-HB_FUNC( CHANGENOTIFYICON )
-{
-   ChangeNotifyIcon( HWNDparam( 1 ), (HICON) hb_parnl(2), (LPSTR) hb_parc(3) );
+   HWNDret( ( HWND ) himage );
 }
 
 static void ChangeNotifyIcon(HWND hWnd, HICON hIcon, LPSTR szText)
@@ -856,6 +640,11 @@ static void ChangeNotifyIcon(HWND hWnd, HICON hIcon, LPSTR szText)
    Shell_NotifyIcon( NIM_MODIFY, &nid );
 }
 
+HB_FUNC( CHANGENOTIFYICON )
+{
+   ChangeNotifyIcon( HWNDparam( 1 ), ( HICON ) hb_parnl( 2 ), ( LPSTR ) hb_parc( 3 ) );
+}
+
 HB_FUNC( GETITEMPOS )
 {
    hb_retnl( (LONG) (((NMMOUSE FAR *) hb_parnl(1))->dwItemSpec) );
@@ -864,15 +653,12 @@ HB_FUNC( GETITEMPOS )
 HB_FUNC( GETWINDOWSTATE )
 {
    WINDOWPLACEMENT wp;
-
    wp.length = sizeof( WINDOWPLACEMENT );
-
    GetWindowPlacement( HWNDparam( 1 ) , &wp );
-
    hb_retni( wp.showCmd );
 }
 
-HB_FUNC ( REDRAWWINDOW )
+HB_FUNC( REDRAWWINDOW )
 {
    RedrawWindow( HWNDparam( 1 ), NULL, NULL,
       RDW_ERASE | RDW_INVALIDATE | RDW_ALLCHILDREN | RDW_ERASENOW | RDW_UPDATENOW
@@ -919,23 +705,20 @@ HB_FUNC( C_SETWINDOWRGN )
 
 HB_FUNC( C_SETPOLYWINDOWRGN )
 {
- HRGN hrgn;
- POINT lppt[512];
- int i,fnPolyFillMode;
- int cPoints = hb_parinfa(2,0);
+   HRGN hrgn;
+   POINT lppt[ 512 ];
+   int i, fnPolyFillMode;
+   int cPoints = hb_parinfa( 2, 0 );
 
- if(hb_parni(4)==1)
-         fnPolyFillMode=WINDING;
- else
-         fnPolyFillMode=ALTERNATE;
+   fnPolyFillMode = ( hb_parni( 4 ) == 1 ) ? WINDING : ALTERNATE;
 
- for(i = 0; i <= cPoints-1; i++)
-  {
-   lppt[i].x=hb_parni(2,i+1);
-   lppt[i].y=hb_parni(3,i+1);
-  }
-  hrgn=CreatePolygonRgn(lppt,cPoints,fnPolyFillMode);
-  SetWindowRgn(GetActiveWindow(),hrgn,TRUE);
+   for( i = 0; i <= cPoints - 1; i++ )
+   {
+      lppt[ i ].x = hb_parni( 2, i + 1 );
+      lppt[ i ].y = hb_parni( 3, i + 1 );
+   }
+   hrgn = CreatePolygonRgn( lppt, cPoints, fnPolyFillMode );
+   SetWindowRgn( GetActiveWindow(), hrgn, TRUE );
 }
 
 HB_FUNC( GETHELPDATA )
@@ -947,10 +730,12 @@ HB_FUNC( GETMSKTEXTMESSAGE )
 {
    hb_retnl( (LONG) (((MSGFILTER FAR *) hb_parnl(1))->msg) );
 }
+
 HB_FUNC( GETMSKTEXTWPARAM )
 {
    hb_retnl( (LONG) (((MSGFILTER FAR *) hb_parnl(1))->wParam) );
 }
+
 HB_FUNC( GETMSKTEXTLPARAM )
 {
    hb_retnl( (LONG) (((MSGFILTER FAR *) hb_parnl(1))->lParam) );
@@ -981,17 +766,15 @@ HB_FUNC( GETGRIDNEWSTATE )
 
 HB_FUNC( GETGRIDDISPINFOINDEX )
 {
+   LV_DISPINFO* pDispInfo = (LV_DISPINFO*)hb_parnl(1);
 
-	LV_DISPINFO* pDispInfo = (LV_DISPINFO*)hb_parnl(1);
+   int iItem = pDispInfo->item.iItem;
 
-	int iItem = pDispInfo->item.iItem;
+   int iSubItem = pDispInfo->item.iSubItem;
 
-	int iSubItem = pDispInfo->item.iSubItem;
-
-	hb_reta( 2 );
-	hb_storni( iItem + 1 , -1, 1 );
-	hb_storni( iSubItem + 1 , -1, 2 );
-
+   hb_reta( 2 );
+   hb_storni( iItem + 1 , -1, 1 );
+   hb_storni( iSubItem + 1 , -1, 2 );
 }
 
 HB_FUNC( SETGRIDQUERYDATA )
@@ -999,27 +782,26 @@ HB_FUNC( SETGRIDQUERYDATA )
 //	LV_DISPINFO* pDispInfo = (LV_DISPINFO*)hb_parnl(1);
 //	pDispInfo->item.pszText = hb_parc(2) ;
 
-	PHB_ITEM pValue = hb_itemNew( NULL );
-	LV_DISPINFO* pDispInfo = (LV_DISPINFO*)hb_parnl(1);
-	hb_itemCopy( pValue, hb_param( 2, HB_IT_STRING ));
-    pDispInfo->item.pszText = hb_itemGetCPtr( pValue );
-
+   PHB_ITEM pValue = hb_itemNew( NULL );
+   LV_DISPINFO* pDispInfo = (LV_DISPINFO*)hb_parnl(1);
+   hb_itemCopy( pValue, hb_param( 2, HB_IT_STRING ));
+   pDispInfo->item.pszText = hb_itemGetCPtr( pValue );
 }
 
 HB_FUNC( SETGRIDQUERYIMAGE )
 {
-    LV_DISPINFO* pDispInfo = ( LV_DISPINFO * ) hb_parnl( 1 );
-    pDispInfo->item.iImage = hb_parni( 2 );
+   LV_DISPINFO* pDispInfo = ( LV_DISPINFO * ) hb_parnl( 1 );
+   pDispInfo->item.iImage = hb_parni( 2 );
 }
 
 HB_FUNC( GETESCAPESTATE )
 {
-     hb_retni ( GetKeyState( VK_ESCAPE ) );
+   hb_retni( GetKeyState( VK_ESCAPE ) );
 }
 
 HB_FUNC( GETALTSTATE )
 {
-     hb_retni ( GetKeyState( VK_MENU ) );
+   hb_retni( GetKeyState( VK_MENU ) );
 }
 
 HB_FUNC( GETCURSORROW )
@@ -1058,12 +840,6 @@ HB_FUNC( FINDWINDOWEX )
                           ( LPCSTR ) hb_parc( 3 ),
                           ( LPCSTR ) hb_parc( 4 )
                                 ) ) ;
-}
-
-HB_FUNC( INITDUMMY )
-{
-   CreateWindowEx( 0, "static", "", WS_CHILD, 0, 0, 0, 0,
-                   HWNDparam( 1 ), ( HMENU ) 0, GetModuleHandle( NULL ), NULL );
 }
 
 WORD DIBNumColors(LPSTR);
